--- a/.bluemix/pipeline.yml
+++ b/.bluemix/pipeline.yml
@@ -1,29 +1,62 @@
 ---
 stages:
-- name: Empty Build Stage
+- name: BUILD
   inputs:
   - type: git
     branch: master
+    service: ${SAMPLE_REPO}
+  triggers:
+  - type: commit
   jobs:
-  - name: Empty Build Job
+  - name: Build
     type: builder
-- name: Deploy to Bluemix
+- name: DEPLOY
   inputs:
   - type: job
-    stage: Empty Build Stage
-    job: Empty Build Job
+    stage: BUILD
+    job: Build
   triggers:
   - type: stage
+  properties:
+  - name: CF_APP_NAME
+    value: undefined
+    type: text
+  - name: APP_URL
+    value: undefined
+    type: text
   jobs:
-  - name: Push to Cloud Foundry
+  - name: Blue-Green Deploy
     type: deployer
     target:
-      url: ${CF_TARGET_URL}
-      organization: ${CF_ORGANIZATION}
-      space: ${CF_SPACE}
-      application: ${CF_APP}
-    script: |-
+      region_id: ${PROD_REGION_ID}
+      organization: ${PROD_ORG_NAME}
+      space: ${PROD_SPACE_NAME}
+      application: ${CF_APP_NAME}
+    script: |
       #!/bin/bash
-      cf create-service ibm-blockchain-5-prod ibm-blockchain-plan-5-prod OpenPointsBlockchainService
-      cf push "${CF_APP}"
-
+      # Push app
+	  cf create-service ibm-blockchain-5-prod ibm-blockchain-plan-5-prod OpenPointsBlockchainService
+      if ! cf app $CF_APP; then  
+        cf push $CF_APP
+      else
+        OLD_CF_APP=${CF_APP}-OLD-$(date +"%s")
+        rollback() {
+          set +e  
+          if cf app $OLD_CF_APP; then
+            cf logs $CF_APP --recent
+            cf delete $CF_APP -f
+            cf rename $OLD_CF_APP $CF_APP
+          fi
+          exit 1
+        }
+        set -e
+        trap rollback ERR
+        cf rename $CF_APP $OLD_CF_APP
+        cf push $CF_APP
+        cf delete $OLD_CF_APP -f
+      fi
+      # Export app name and URL for use in later Pipeline jobs
+      export CF_APP_NAME="$CF_APP"
+      export APP_URL=http://$(cf app $CF_APP_NAME | grep urls: | awk '{print $2}')
+      # View logs
+      #cf logs "${CF_APP}" --recent
